@@ -120,7 +120,7 @@ new JobProcessorFactory(new ProcessorFactory(init), "AMGMuxer");
             // mux in the rest if it exists
             if (!string.IsNullOrEmpty(settings.MuxedInput))
             {
-                MediaInfoFile oVideoInfo = new MediaInfoFile(settings.VideoInput, ref log);
+                MediaInfoFile oVideoInfo = new MediaInfoFile(settings.MuxedInput, ref log);
                 script.AppendFormat("LOAD {1}{0}SELECT FILE {2}{0}ADD VIDEOSOURCE{0}DESELECT FILE {2}{0}",
                     Environment.NewLine, settings.MuxedInput, fileNum);
                 fileNum++;
